--- a/SocialJournalSwift/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
+++ b/SocialJournalSwift/SocialJournal/SocialJournal/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="n7h-WL-g5o">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch.iPad" propertyAccessControl="none" initialViewController="n7h-WL-g5o">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
@@ -824,6 +824,7 @@
                                         <connections>
                                             <outlet property="userNameLabel" destination="7bM-vn-eSG" id="4ke-tU-CId"/>
                                             <outlet property="userProfilePicture" destination="un4-K0-QV8" id="Uue-ZH-3pC"/>
+                                            <segue destination="KnP-Dv-HUE" kind="push" identifier="goToProfileFromCollectionCell" id="jtz-P9-lqm"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -836,7 +837,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="iTq-8N-tby">
-                                <rect key="frame" x="659" y="26" width="93.000000136023957" height="30"/>
+                                <rect key="frame" x="659" y="26" width="93.000000136031559" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
@@ -862,7 +863,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h3r-ae-W0K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2271" y="2226"/>
+            <point key="canvasLocation" x="2223" y="2218"/>
         </scene>
         <!--Sign In Controller-->
         <scene sceneID="86E-pc-28C">
@@ -958,7 +959,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QBC-wN-MwF" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-224" y="6"/>
+            <point key="canvasLocation" x="-228" y="81"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="wfQ-4r-wrD">
@@ -1168,7 +1169,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v75-nm-dBx" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-20" y="-1273"/>
+            <point key="canvasLocation" x="-212" y="-1141"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Rjs-9m-rFe">
@@ -1246,8 +1247,9 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="rWJ-xo-X90"/>
+        <segue reference="hYT-zi-chh"/>
+        <segue reference="ce0-5R-9At"/>
+        <segue reference="bcP-45-tv5"/>
         <segue reference="v8L-5b-OO1"/>
-        <segue reference="ZRs-k0-M2B"/>
     </inferredMetricsTieBreakers>
 </document>
